# CmakeMultiSo

./: README.md  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/mushuichuan/cmakemutiso/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/cpp/include/: Layer1.h  Layer2.h
app/src/main/cpp/layer2/: CMakeLists.txt  Layer2.cpp
app/src/main/cpp/layer3/: CMakeLists.txt  Layer3.cpp
app/src/main/java/com/mushuichuan/cmakemutiso/: MainActivity.java
app/src/main/res/layout/: activity_main.xml  content_main.xml
app/src/main/res/menu/: menu_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/mushuichuan/cmakemutiso/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
layer1/: CMakeLists.txt  build.gradle
layer1/src/androidTest/java/com/mushuichuan/layer1/: ExampleInstrumentedTest.java
layer1/src/main/: AndroidManifest.xml
layer1/src/main/cpp/: Layer1.cpp  Layer1.h
layer1/src/main/java/com/mushuichuan/layer1/: MainActivity.java
layer1/src/main/res/layout/: activity_main.xml  content_main.xml
layer1/src/main/res/menu/: menu_main.xml
layer1/src/main/res/values/: strings.xml
layer1/src/test/java/com/mushuichuan/layer1/: ExampleUnitTest.java
